# PhenoEstimator

./: README.md  pyproject.toml
notebooks/: exploratory.ipynb  inat_scratchpad.ipynb  weather_scratchpad.ipynb
phenoestimator/: __init__.py  main.py
phenoestimator/io/: __init__.py  inat_io.py
